<resources>
    <string name="app_name">Track Me</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_sensors_array">Sensors array</string>
    <string name="button_acc">Accelerometer</string>
    <string name="acc_x">X direction</string>
    <string name="acc_y">Y direction</string>
    <string name="acc_z">Z direction</string>
    <string name="acc_x_val">%.3f [m/s^2]</string>
    <string name="acc_y_val">%.3f [m/s^2]</string>
    <string name="acc_z_val">%.3f [m/s^2]</string>
    <string name="button_dead_reckoning">Dead reckoning</string>
    <string name="button_tracking">Tracking</string>
    <string name="pos_N">Position N</string>
    <string name="pos_E">Position E</string>
    <string name="pos_H">Altitude</string>
    <string name="pos_N_val">%.2f [m]</string>
    <string name="pos_E_val">%.2f [m]</string>
    <string name="pos_H_val">%.2f [m]</string>
    <string name="button_wifi">WiFi</string>
    <string name="wifi_rssi">RSSI %d</string>
    <string name="wifi_frequency">Freq %d [MHz]</string>
    <string name="wifi_distance">Distance %.1f [m]</string>
    <string name="button_bt">Bluetooth</string>
</resources>