<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeadReckoningActivity">

    <TextView
        android:id="@+id/pos_N"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pos_N"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pos_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pos_E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pos_N" />

    <TextView
        android:id="@+id/pos_H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pos_H"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pos_E" />

    <TextView
        android:id="@+id/pos_N_val_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pos_N_val"
        app:layout_constraintBaseline_toBaselineOf="@+id/pos_N"
        app:layout_constraintStart_toEndOf="@+id/pos_N" />

    <TextView
        android:id="@+id/pos_E_val_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos_E_val"
        app:layout_constraintBaseline_toBaselineOf="@+id/pos_E"
        app:layout_constraintStart_toStartOf="@+id/pos_N_val_m" />

    <TextView
        android:id="@+id/pos_H_val_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos_H_val"
        app:layout_constraintBaseline_toBaselineOf="@+id/pos_H"
        app:layout_constraintStart_toStartOf="@+id/pos_E_val_m" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/axis_device" />

</androidx.constraintlayout.widget.ConstraintLayout>